# OpenAvatarChat

./: .gitignore  .gitmodules  Dockerfile  INTEGRATION_EXAMPLE.md  OpenAvatarChat.code-workspace  USER_DATA_INTEGRATION.md  build_and_run.sh  justfile  nohup.out
config/: chat_with_function_call.yaml  chat_with_openai_compatible_bailian_cosyvoice.yaml  chat_with_openai_compatible_bailian_cosyvoice_rag.yaml  simplify_llm_config.yaml
src/: demo.py
src/chat_engine/common/: client_handler_base.py
src/chat_engine/contexts/: session_context.py
src/chat_engine/data_models/: session_info_data.py
src/handlers/asr/paraformer/: README.md  __init__.py  asr_handler_paraformer.py  pyproject.toml
src/handlers/client/rtc_client/: client_handler_rtc.py
src/handlers/llm/openai_compatible/: chat_history_manager.py  llm_handler_openai_compatible.py  tools.py
src/service/rtc_service/: rtc_stream.py
src/service/service_data_models/: logger_config_data.py
src/service/service_utils/: logger_utils.py
src/utils/: user_data_extractor.py  user_id_storage.py
